GGB-2123 avoid overflow of the applet at the bottom
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@57602 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/layout.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/layout.scss
@@ -60,7 +60,7 @@
 			border: none;
     		box-shadow: 2px -1px 8px 4px rgba(0,0,0,0.4);
     		height: 0px !important;
-    		top: 0px !important;
+    		top: 9px !important;
 		}
 	}
 	
