--- a/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
@@ -197,8 +197,8 @@ $movebtn-transition: bottom  250ms cubic-bezier(0.4, 0, 1, 1) 0ms;
 		.header-close-portrait	{
 			@extend .header-open-landscape;
 			position: absolute;
-			bottom: -4px;
-			
+			bottom: 0;
+			height: 52px;
 			.center {			
 				.indicator {
 					display: none;
